--- a/commands.d/check_gpg_expiry.conf
+++ b/commands.d/check_gpg_expiry.conf
@@ -26,5 +26,9 @@ object CheckCommand "check_gpg_expiry" {
             set_if = "$gpg_expiring$"
             description = "Only show expiring keys in verbose output"
         }
+	"--ignore" = {
+            required = false
+            value = "$gpg_ignore$"
+        }
     }
 }
